# wiringX-java

./: .gitignore  CMakeLists.txt  DigitalValue.java  ISRMode.java  LogConsumer.java  Makefile  PinMode.java  SerialConfig.java  gdbserver.c  jlogconsumer.c  jlogconsumer.h  jni-util.c  jni-util.h  jwiringx.c  jwiringx_gpio.c  jwiringx_i2c.c  wiringX.java  wiringXTest.java
cmake_modules/: FindJUnit.cmake  FindwiringX.cmake
debian/: changelog  control  copyright  rules
eu/jm0/wiringX/: DigitalValue.java  ISRMode.java  LogConsumer.java  SerialConfig.java  wiringX.java  wiringXTest.java
src/: CMakeLists.txt  gdbserver.c  jlogconsumer.c  jlogconsumer.h  jni-cache.c  jni-cache.h  jni-util.c  jni-util.h  jwiringx.c  jwiringx_gpio.c  jwiringx_i2c.c  jwiringx_serial.c  jwiringx_spi.c
src/eu/jm0/wiringX/: DigitalValue.java  ISRMode.java  LogConsumer.java  PinMode.java  SerialConfig.java  UByte.java  UByteArray.java  wiringX.java  wiringXTest.java
test/: CMakeLists.txt
test/eu/jm0/wiringX/: wiringXTest.java
